--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "core-js": "^3.6.5",
     "flyio": "^0.6.2",
     "mockjs": "^1.1.0",
+    "mp-html": "^2.0.2",
     "regenerator-runtime": "^0.12.1",
     "thorui-uni": "^1.6.0",
     "uview-ui": "^1.8.2",
