--- a/package.json
+++ b/package.json
@@ -57,9 +57,10 @@
     "@dcloudio/uni-stat": "^2.0.0-29820201110001",
     "@vue/shared": "^3.0.0",
     "core-js": "^3.6.5",
+    "file-saver": "^2.0.5",
     "flyio": "^0.6.2",
     "mockjs": "^1.1.0",
-    "mp-html": "^2.0.2",
+    "mp-html": "^2.0.4",
     "regenerator-runtime": "^0.12.1",
     "thorui-uni": "^1.6.0",
     "uview-ui": "^1.8.2",
